# Dev-ChatDesktop

./: .gitignore  CMakeLists.txt  Dev-ChatDesktop.pro  ISSUE_TEMPLATE.md  LICENSE  README.md  chat.ui  chat_client.cpp  chat_client.h  chat_client.ui  client_info.cpp  client_info.h  dbmanager.cpp  dbmanager.h  items_server_list.cpp  items_server_list.h  items_server_list.ui  main.cpp  message_chat.cpp  message_chat.h  message_chat.ui  new_server_window.cpp  new_server_window.h  new_server_window.ui  server_list_window.cpp  server_list_window.h  server_list_window.ui
